# HELM

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: dev-to-main.yml  main-to-prod.yml  release.yml
agent/: Cargo.toml  Cross.toml  README.md
agent/src/: account.rs  adb.rs  battery.rs  claude.rs  cli.rs  commands.rs  config.rs  cpu.rs  disk.rs  git.rs  main.rs  mdns.rs  memory.rs  music.rs  network.rs  process.rs  protocol.rs  security.rs  state.rs  temperature.rs  tray.rs  websocket.rs  window.rs  workspace.rs
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/dev/helm/app/: BootReceiver.kt  HelmApp.kt  KioskManager.kt  MainActivity.kt
android/app/src/main/java/dev/helm/app/data/model/: HelmModels.kt
android/app/src/main/java/dev/helm/app/data/nsd/: NsdDiscovery.kt
android/app/src/main/java/dev/helm/app/data/prefs/: ConnectionPreferences.kt
android/app/src/main/java/dev/helm/app/data/repository/: HelmRepository.kt
android/app/src/main/java/dev/helm/app/data/websocket/: ConnectionManager.kt  HelmWebSocketClient.kt
android/app/src/main/java/dev/helm/app/di/: AppModule.kt
android/app/src/main/java/dev/helm/app/service/: HelmForegroundService.kt
android/app/src/main/java/dev/helm/app/ui/: MainViewModel.kt
android/app/src/main/java/dev/helm/app/ui/account/: AccountScreen.kt  AccountViewModel.kt
android/app/src/main/java/dev/helm/app/ui/claude/: ClaudeScreen.kt  ClaudeViewModel.kt
android/app/src/main/java/dev/helm/app/ui/components/: CommitRow.kt  ConnectionBanner.kt  FileCountChip.kt  FormatUtils.kt  HelmCard.kt  MetricCard.kt  ProgressBar.kt  SparklineGraph.kt  StatusBadge.kt
android/app/src/main/java/dev/helm/app/ui/development/: DevelopmentScreen.kt  DevelopmentViewModel.kt
android/app/src/main/java/dev/helm/app/ui/git/: GitScreen.kt  GitViewModel.kt
android/app/src/main/java/dev/helm/app/ui/media/: MediaScreen.kt  MediaViewModel.kt
android/app/src/main/java/dev/helm/app/ui/navigation/: HelmNavigation.kt
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/xml/: network_security_config.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
docs/: README.md  architecture.md  cli.md  setup.md
docs/superpowers/specs/: 2026-06-02-security-and-tray-design.md
examples/: README.md
hooks/: helm-claude-hook  install-hooks.sh
plugins/: README.md
protocol/: README.md
protocol/schema/: command.schema.json  command_ack.schema.json  envelope.schema.json  git_update.schema.json  music_update.schema.json  process_update.schema.json  system_info.schema.json  system_update.schema.json  vscode_update.schema.json  window_update.schema.json
(+11 files in other folders)
