[package]
name = "helm-agent"
version = "0.2.0"
edition = "2021"
description = "HELM desktop agent — serves system data to Android sidecar display"
license = "MIT"

[[bin]]
name = "helm-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
git2 = { version = "0.19", default-features = false }
zbus = { version = "4", default-features = false, features = ["tokio"] }
notify = "6"
battery = "0.7"
config = "0.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
mdns-sd = "0.11"
qr2term = "0.3"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
