[package]
name = "helm-agent"
version = "0.4.4"
edition = "2021"
description = "HELM desktop agent — serves system data to Android sidecar display"
license = "MIT"

[[bin]]
name = "helm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24" }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
git2 = { version = "0.19", default-features = false }
zbus = { version = "4", default-features = false, features = ["tokio"] }
notify = "6"
battery = "0.7"
config = "0.14"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
mdns-sd = "0.11"
qr2term = "0.3"
clap = { version = "4", features = ["derive"] }
libc = "0.2"

# Security (WiFi mode)
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"] }
tokio-rustls = "0.26"
rustls-pemfile = "2"
rand = { version = "0.8", features = ["getrandom"] }
sha2 = "0.10"
subtle = "2"

# System tray (optional, see [features])
tray-icon = { version = "0.17", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }

[features]
default = ["tray"]
tray = ["dep:tray-icon", "dep:gtk"]

[profile.release]
opt-level = 3
lto = true
strip = true
